Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UPrimitiveComponent.h

	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnClient; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnClient = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnServer; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnServer = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDistanceFieldLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDistanceFieldLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDynamicIndirectLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDynamicIndirectLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_GET(UPrimitiveComponent* Ptr) { return Ptr->bAllowCullDistanceVolume; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAllowCullDistanceVolume = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_GET(UPrimitiveComponent* Ptr) { return Ptr->bAlwaysCreatePhysicsState; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAlwaysCreatePhysicsState = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_GET(UPrimitiveComponent* Ptr) { return Ptr->bApplyImpulseOnDamage; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bApplyImpulseOnDamage = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsDynamic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsDynamic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsStatic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsStatic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastCinematicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastCinematicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastCinematicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastCinematicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastDynamicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastDynamicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastDynamicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastDynamicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastFarShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastFarShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastFarShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastFarShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastHiddenShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastHiddenShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastHiddenShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastHiddenShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastInsetShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastInsetShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastInsetShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastInsetShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastShadowAsTwoSided; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastShadowAsTwoSided = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastStaticShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastStaticShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastStaticShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastStaticShadow = Value; }
	DOTNET_EXPORT auto E_UPrimitiveComponent_SendRenderDynamicData_Concurrent(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SetActive(UPrimitiveComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SetAutoActivate(UPrimitiveComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SetComponentTickEnabled(UPrimitiveComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SetComponentTickEnabledAsync(UPrimitiveComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldActivate(UPrimitiveComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ToggleActive(UPrimitiveComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UninitializeComponent(UPrimitiveComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_AreNativePropertiesIdenticalTo(UPrimitiveComponent* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CheckDefaultSubobjectsInternal(UPrimitiveComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetDesc(UPrimitiveComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetDetailedInfoInternal(UPrimitiveComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsAsset(UPrimitiveComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsFullNameStableForNetworking(UPrimitiveComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsLocalizedResource(UPrimitiveComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsPostLoadThreadSafe(UPrimitiveComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsSafeForRootSet(UPrimitiveComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_Modify(UPrimitiveComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_NotifyObjectReferenceEliminated(UPrimitiveComponent* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostCDOContruct(UPrimitiveComponent* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostEditImport(UPrimitiveComponent* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostSaveRoot(UPrimitiveComponent* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PreDestroyFromReplication(UPrimitiveComponent* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShutdownAfterError(UPrimitiveComponent* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_AddToCluster(UPrimitiveComponent* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CanBeClusterRoot(UPrimitiveComponent* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CanBeInCluster(UPrimitiveComponent* Self)
	{
		return Self->CanBeInCluster();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CreateCluster(UPrimitiveComponent* Self)
	{
		Self->CreateCluster();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnClusterMarkedAsPendingKill(UPrimitiveComponent* Self)
	{
		Self->OnClusterMarkedAsPendingKill();
	}