Plugins/UnrealDotNet/Source/NetCoreProject/UnrealEngine/Generate/Class/UPrimitiveComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_SendRenderDynamicData_Concurrent(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_SetActive(IntPtr Self, bool bNewActive, bool bReset);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_SetAutoActivate(IntPtr Self, bool bNewAutoActivate);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_SetComponentTickEnabled(IntPtr Self, bool bEnabled);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_SetComponentTickEnabledAsync(IntPtr Self, bool bEnabled);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_ShouldActivate(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_ToggleActive(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_UninitializeComponent(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_AreNativePropertiesIdenticalTo(IntPtr Self, IntPtr Other);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_CheckDefaultSubobjectsInternal(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UPrimitiveComponent_GetDesc(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UPrimitiveComponent_GetDetailedInfoInternal(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_IsAsset(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_IsFullNameStableForNetworking(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_IsLocalizedResource(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_IsPostLoadThreadSafe(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_IsSafeForRootSet(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_Modify(IntPtr Self, bool bAlwaysMarkDirty);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_NotifyObjectReferenceEliminated(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_PostCDOContruct(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_PostEditImport(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_PostSaveRoot(IntPtr Self, bool bCleanupIsRequired);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_PreDestroyFromReplication(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_ShutdownAfterError(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_AddToCluster(IntPtr Self, IntPtr ClusterRootOrObjectFromCluster, bool bAddAsMutableObject);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_CanBeClusterRoot(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_CanBeInCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_CreateCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_OnClusterMarkedAsPendingKill(IntPtr Self);
		
		#endregion
		
		#region Property
		public byte AlwaysLoadOnClient
		{
			get => E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_SET(NativePointer, value);
		}

		public byte AlwaysLoadOnServer
		{
			get => E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should affect dynamic distance field lighting methods.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte bAffectDistanceFieldLighting
		{
			get => E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should inject light into the Light Propagation Volume.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte bAffectDynamicIndirectLighting
		{
			get => E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to accept cull distance volumes to modify cached cull distance. </para>
		/// </summary>
		public byte bAllowCullDistanceVolume
		{
			get => E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Indicates if we'd like to create physics state all the time (for collision and simulation). </para>
		/// <para>If you set this to false, it still will create physics state if collision or simulation activated. </para>
		/// <para>This can help performance if you'd like to avoid overhead of creating physics state when triggers </para>
		/// </summary>
		public byte bAlwaysCreatePhysicsState
		{
			get => E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>True for damage to this component to apply physics impulse, false to opt out of these impulses. </para>
		/// </summary>
		public byte bApplyImpulseOnDamage
		{
			get => E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive is referenced by a FDynamicTextureInstanceManager </para>
		/// </summary>
		public byte bAttachedToStreamingManagerAsDynamic
		{
			get => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive is referenced by a FLevelTextureManager </para>
		/// </summary>
		public byte bAttachedToStreamingManagerAsStatic
		{
			get => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this component should cast shadows from lights that have bCastShadowsFromCinematicObjectsOnly enabled. </para>
		/// <para>This is useful for characters in a cinematic with special cinematic lights, where the cost of shadowmap rendering of the environment is undesired. </para>
		/// </summary>
		public byte bCastCinematicShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastCinematicShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastCinematicShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should cast shadows in the case of non precomputed shadowing.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte DynamicShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastDynamicShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastDynamicShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When enabled, the component will be rendering into the far shadow cascades (only for directional lights). </para>
		/// </summary>
		public byte FarShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastFarShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastFarShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, the primitive will cast shadows even if bHidden is true. </para>
		/// <para>Controls whether the primitive should cast shadows when hidden. </para>
		/// <para>This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte HiddenShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastHiddenShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastHiddenShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this component should create a per-object shadow that gives higher effective shadow resolution. </para>
		/// <para>Useful for cinematic character shadowing. Assumed to be enabled if bSelfShadowOnly is enabled. </para>
		/// </summary>
		public byte DynamicInsetShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastInsetShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastInsetShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive should cast dynamic shadows as if it were a two sided material. </para>
		/// </summary>
		public byte ShadowTwoSided
		{
			get => E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether the object should cast a static shadow from shadow casting lights.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte StaticShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastStaticShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastStaticShadow_SET(NativePointer, value);
		}

